<resources>
    <string name="app_name">Email Agent</string>
    <string name="api_button">Call gmail api</string>
    <string name="test_button">Test button %s</string>
    <string name="subject_text">SUBJECT:</string>
    <string name="receiver">receiver:</string>
    <string name="no_connection">No network connection available.</string>
    <string name="calling_api">Calling Gmail API ...</string>
    <string name="quickstart_api">Gmail API Android Quickstart</string>
    <string name="retrieve_data">Data retrieved using the Gmail API:</string>
    <string name="no_results">No results returned.</string>
    <string name="request_canceled">RequestType cancelled.</string>
    <string name="error_occured">The following error occurred:</string>
    <string name="back_arrow_name">move back</string>
    <string name="navigation_toolbar_item">navigation</string>
    <string name="inbox_messages">Inbox messages</string>
    <string name="outbox_messages">Outbox messages</string>
    <string name="drafts">Drafts</string>
    <string name="recycle">Recycle</string>
    <string name="delete_item">DELETE</string>
    <string name="progress_dialog_message">Getting messages...</string>
    <string name="no_services_found">No Google Services found!</string>
    <string name="no_content"><![CDATA[<No content>]]></string>
    <string name="email_address_warning">Enter email address!</string>
    <string name="subject">subject:</string>
    <string name="mailer">mailer:</string>
    <string name="problems_with_content">There are some problems with loading message content.</string>
    <string name="unread_messages">Unread messages</string>
</resources>
